# script-runner

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/script_runner/: cli.py  config.py  exceptions.py  runner.py  utils.py
src/script_runner/commands/: add.py  delete.py
tests/test_script_runner/: test_add.py  test_get_venv.py
