[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "script_runner"
license = {text = "MIT"}
version = "0.1.0"
description = "Run Python and shell scripts with their interpreters and virtual environments"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]

[project.scripts]
script_runner = "script_runner.cli:cli"
sr = "script_runner.cli:cli"
